# qkrylov

./: .clang-format  .gitattributes  .gitignore  CITATION.cff  CMakeLists.txt  CMakePresets.json  DEVELOPER.md  LICENSE  Makefile  README.md  VISION.md  requirements.txt
Code/: test_basis  test_hamiltonian_sz  test_heisenberg_2site  test_lanczos_2site  test_opsum  test_spinhalf_site  test_vector_ops
Code/include/qkrylov/basis/: basis.hpp  spinhalf_basis.hpp
Code/include/qkrylov/core/: types.hpp
Code/include/qkrylov/hamiltonian/: matrix_free_hamiltonian.hpp
Code/include/qkrylov/operators/: operator_term.hpp  opsum.hpp
Code/include/qkrylov/solvers/: lanczos.hpp
Code/include/qkrylov/symmetry/: sector.hpp
Code/src/: lanczos.cpp  matrix_free_hamiltonian.cpp  spinhalf_basis.cpp  spinhalf_site.cpp
Code/test/: test_lanczos_2site.cpp  test_spinhalf_site.cpp  test_vector_ops.cpp
bindings/julia/: Project.toml  README.md
bindings/julia/src/: QKrylov.jl  binding.cpp
bindings/julia/test/: runtests.jl
bindings/python/: README.md  pyproject.toml
bindings/python/qkrylov/: __init__.py
bindings/python/src/: binding.cpp
bindings/python/tests/: test_basic.py
cmake/: qkrylovConfig.cmake.in
docs/source/: api.md  conf.py  examples.md  index.rst  install.md  tutorial.md  vision.md
examples/: dynamics_example.py  hdf5_storage.py  heisenberg_python.py
include/qkrylov/basis/: basis.hpp  fermion_basis.hpp  generic_basis.hpp  hubbard_basis.hpp  spinhalf_basis.hpp  tj_basis.hpp
include/qkrylov/hamiltonian/: cuda_hamiltonian.hpp  matrix_free_hamiltonian.hpp
include/qkrylov/linalg/: vector_ops.hpp
include/qkrylov/operators/: local_action.hpp  operator_term.hpp  opsum.hpp
include/qkrylov/sites/: boson_site.hpp  fermion_site.hpp  hardcore_boson_site.hpp  hubbard_site.hpp  site.hpp  spin_s_site.hpp  spinhalf_site.hpp  tj_site.hpp
include/qkrylov/solvers/: davidson.hpp  dynamics.hpp  ftlm.hpp
include/qkrylov/symmetry/: sector.hpp
src/basis/: fermion_basis.cpp  generic_basis.cpp  hubbard_basis.cpp  tj_basis.cpp
src/hamiltonian/: cuda_hamiltonian.cu  matrix_free_hamiltonian.cpp
src/operators/: opsum.cpp
src/sites/: boson_site.cpp  fermion_site.cpp  hardcore_boson_site.cpp  hubbard_site.cpp  spin_s_site.cpp  spinhalf_site.cpp  tj_site.cpp
src/solvers/: davidson.cpp  dynamics.cpp  ftlm.cpp  lanczos.cpp
tests/: CMakeLists.txt  test_davidson.cpp  test_dynamics.cpp  test_fermion_basis.cpp  test_fermion_site.cpp  test_ftlm.cpp  test_hamiltonian_sz.cpp  test_heisenberg_2site.cpp  test_lanczos_ritz.cpp  test_mixed_system.cpp  test_opsum.cpp  test_spinhalf_basis.cpp  test_spinhalf_site.cpp  test_tj_basis.cpp  test_tj_site.cpp  user_friendly_test.cpp
