[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "qkrylov"
version = "0.1.0"
description = "Python interface for qkrylov"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "qkrylov contributors" }
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Physics"
]
dependencies = [
    "numpy"
]

[project.optional-dependencies]
test = [
    "pytest"
]
docs = [
    "mkdocs",
    "mkdocs-material"
]

[project.urls]
Homepage = "https://github.com/qkrylov/qkrylov"
Documentation = "https://qkrylov.github.io/qkrylov/"
Issues = "https://github.com/qkrylov/qkrylov/issues"

[tool.hatch.build.targets.wheel]
packages = ["qkrylov"]

[tool.pytest.ini_options]
testpaths = ["tests"]

